--- a/course.html
+++ b/course.html
@@ -353,4 +353,10 @@
         </div>
     </section>
 </body>
+<form action="/captcha.php" method="post" style="margin-left: 300px;">
+    <input type="text" name="Name" placeholder="Name" style="border:1px solid #999; margin-bottom: 20px; width: 300px; height: 40px; margin-top: 50px; text-indent: 15px;">
+    <div class="g-recaptcha" data-sitekey="6LfTEecfAAAAAGBWecK-eGJTPzq55SmT_croqz6T"></div>
+    <button type="submit" style="height: 30px; padding: 5px 20px; background-color: green; color:#fff; margin-top: 20px; margin-bottom: 50px;"> Submit</button>
+</form>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </html>
